--- a/public/styles/scss/theme/_color-guide.scss
+++ b/public/styles/scss/theme/_color-guide.scss
@@ -4,5 +4,5 @@ $secondary-green: #009421;
 $accent-green: #3C5233;
 $main-grey: #666666;
 $stone-grey: #515052;
-$primary-tan: #f0eade93;
+$primary-tan: #f5f0e7;
 $standard-font-weight: 700;
