--- a/views/includes/components/landing-reviews.pug
+++ b/views/includes/components/landing-reviews.pug
@@ -1,9 +1,9 @@
-.card.carousel-card.row.text-left
+.card.carousel-card.row
   #clientCarousel.carousel.slide(data-ride="carousel")
     .carousel-inner
     .carousel-item.active
       .card.client-card
-        .client-card-body
+        .client-card-body.card
           span.post-format
             i(class=quote_icon)
           h5.review-text
@@ -23,7 +23,7 @@
               i(class=review_star_icon)
     .carousel-item
       .card.client-card
-        .client-card-body
+        .client-card-body.card
           span.post-format
             i(class=quote_icon)
           h5.review-text
