--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,3 +1,2 @@
 script(src='https://use.fontawesome.com/releases/v5.5.0/js/all.js')
-//- jquery
-script(src="../js/landing.js")
+script(src='/js/landing.js')
