--- a/views/includes/variables.pug
+++ b/views/includes/variables.pug
@@ -2,6 +2,7 @@
 - var btnLg = ['btn', 'btn-outline-light', 'btn-lg']
 - var play_icon = ['fas', 'fa-play-circle', 'fa-4x']
 - var slider_icon = ['fas', 'fa-sliders-h', 'fa-4x']
+- var plus_icon = ['fas', 'fa-plus-circle', 'fa-lg']
 - var page_icon = ['fab fa-wpforms fa-4x']
 - var phone_icon = ['fas', 'fa-phone', 'fa-sm']
 - var money_icon = ['fas', 'fa-money-bill-wave', 'fa-3x']
