--- a/public/styles/css/app.css
+++ b/public/styles/css/app.css
@@ -93,54 +93,24 @@ h3 {
   }
 }
 .btn, .btn-md {
-  letter-spacing: 0.1em;
-  color: #000;
-  border: 4px solid #515052;
+  border: 1px solid #003b0d;
+  background: #004f11;
+  border-radius: 0;
   -webkit-box-shadow: 10px 10px 24px -1px #a6a6a6;
   -moz-box-shadow: 10px 10px 24px -1px #a6a6a6;
   box-shadow: 10px 10px 24px -1px #a6a6a6;
-  background-color: #fff;
-  margin: 1em;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 900;
+  letter-spacing: 1px;
+  line-height: 45px;
+  margin: 1em 0 1em 0;
   overflow: hidden;
+  padding: 0.25rem;
   position: relative;
   transition: all 0.5s ease-in-out;
-}
-.btn:hover, .btn-md:hover {
-  color: #000;
-  background-color: #FFF;
-  box-shadow: 0px 1px 10px 0px #3f3f3f;
-}
-.btn .span, .btn-md .span {
-  transition: all 0.2s ease-out;
-  z-index: 2;
-}
-.btn:hover span, .btn-md:hover span {
-  letter-spacing: 0.13em;
-  color: #FFF;
-}
-.btn:after, .btn-md:after {
-  background: #FFF;
-  border: 0px solid #c7c7c7;
-  content: "";
-  height: 145px;
-  left: -75px;
-  opacity: 0.8;
-  position: absolute;
-  top: -45px;
-  -webkit-transform: rotate(47deg);
-  transform: rotate(47deg);
-  width: 50px;
-  transition: all 1s cubic-bezier(0.475, 0.82, 0.265, 1);
-  /*easeOutCirc*/
-  z-index: 1;
-}
-.btn:hover:after, .btn-md:hover:after {
-  background: #FFF;
-  border: 15px solid rgba(53, 53, 53, 0.5);
-  opacity: 0.3;
-  left: 125%;
-  -webkit-transform: rotate(40deg);
-  transform: rotate(40deg);
+  width: 100%;
 }
 
 .btn-md:hover:after {
@@ -160,8 +130,14 @@ h3 {
   margin: 1em;
 }
 
-.btn {
-  border-radius: 0;
+.btn:hover {
+  background: #00400e;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
+  color: white;
+  text-decoration: none;
+  text-shadow: -1px -1px 0 black;
+  transition: all 250ms linear;
 }
 
 .dropdown-toggle {
@@ -233,28 +209,266 @@ h3 {
 }
 
 /* ======= NAVIGATION ========= */
-#home {
-  height: 8rem;
-}
-
 .navbar {
-  background-color: white;
-  font-weight: 700;
-  font-size: 0.9rem;
-  letter-spacing: 0.1rem;
-  text-transform: uppercase;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 0;
+  width: 100%;
+  transition: background 0.6s ease-in;
+  z-index: 99999;
 }
 
-.navbar-brand img {
-  margin-bottom: 0.75rem;
-  height: 4.5rem;
+.navbar .navbar-brand {
+  margin-left: 1rem;
+  font-family: "Lobster", cursive;
+  font-size: 2.5rem;
+}
+.navbar .navbar-brand img {
+  height: 80px;
 }
 
-.navbar-light .navbar-nav .nav-link.active,
-.navbar-light .navbar-nav .nav-link:hover {
+.navbar .navbar-toggler {
+  position: relative;
+  height: 50px;
+  width: 50px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.navbar .navbar-toggler .menu-icon-bar {
+  position: absolute;
+  left: 15px;
+  right: 15px;
+  height: 2px;
+  background-color: #fff;
+  opacity: 0;
+  -webkit-transform: translateY(-1px);
+  -ms-transform: translateY(-1px);
+  transform: translateY(-1px);
+  transition: all 0.3s ease-in;
+}
+
+.navbar .navbar-toggler .menu-icon-bar:first-child {
+  opacity: 1;
+  -webkit-transform: translateY(-1px) rotate(45deg);
+  -ms-sform: translateY(-1px) rotate(45deg);
+  transform: translateY(-1px) rotate(45deg);
+}
+
+.navbar .navbar-toggler .menu-icon-bar:last-child {
+  opacity: 1;
+  -webkit-transform: translateY(-1px) rotate(135deg);
+  -ms-sform: translateY(-1px) rotate(135deg);
+  transform: translateY(-1px) rotate(135deg);
+}
+
+.navbar .navbar-toggler.collapsed .menu-icon-bar {
+  opacity: 1;
+}
+
+.navbar .navbar-toggler.collapsed .menu-icon-bar:first-child {
+  -webkit-transform: translateY(-7px) rotate(0);
+  -ms-sform: translateY(-7px) rotate(0);
+  transform: translateY(-7px) rotate(0);
+}
+
+.navbar .navbar-toggler.collapsed .menu-icon-bar:last-child {
+  -webkit-transform: translateY(5px) rotate(0);
+  -ms-sform: translateY(5px) rotate(0);
+  transform: translateY(5px) rotate(0);
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  position: relative;
+  color: #fff;
+  font-size: 1.25rem;
+}
+
+.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+  color: #fff;
+}
+
+.navbar .dropdown-menu {
+  padding: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.navbar .dropdown-menu .dropdown-item {
+  position: relative;
+  padding: 10px 20px;
+  color: #fff;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  transition: color 0.2s ease-in;
+}
+
+.navbar .dropdown-menu .dropdown-item:last-child {
+  border-bottom: none;
+}
+
+.navbar .dropdown-menu .dropdown-item:hover {
+  background: transparent;
   color: #004f11;
 }
 
+.navbar .dropdown-menu .dropdown-item::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  top: 0;
+  width: 5px;
+  background-color: #004f11;
+  opacity: 0;
+  transition: opacity 0.2s ease-in;
+}
+
+.navbar .dropdown-menu .dropdown-item:hover::before {
+  opacity: 1;
+}
+
+.navbar.fixed-top {
+  position: fixed;
+  -webkit-animation: navbar-animation 0.6s;
+  animation: navbar-animation 0.6s;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.navbar.fixed-top.navbar-dark .navbar-nav .nav-link.active {
+  color: #004f11;
+}
+
+.navbar.fixed-top.navbar-dark .navbar-nav .nav-link::after {
+  background-color: #004f11;
+}
+
+.content {
+  padding: 120px 0;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar-brand {
+    margin-left: 20px;
+  }
+
+  .navbar-nav {
+    padding: 0 20px;
+    background-color: rgba(0, 0, 0, 0.9);
+  }
+
+  .navbar.fixed-top .navbar-nav {
+    background: transparent;
+  }
+}
+@media screen and (min-width: 767px) {
+  .banner {
+    padding: 0 150px;
+  }
+
+  .banner h1 {
+    font-size: 5rem;
+  }
+
+  .banner p {
+    font-size: 2rem;
+  }
+
+  .navbar-dark .navbar-nav .nav-link {
+    padding: 23px 15px;
+  }
+
+  .navbar-dark .navbar-nav .nav-link::after {
+    content: "";
+    position: absolute;
+    bottom: 15px;
+    left: 30%;
+    right: 30%;
+    height: 1px;
+    background-color: #fff;
+    -webkit-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    transform: scaleX(0);
+    transition: transform 0.1s ease-in;
+  }
+
+  .navbar-dark .navbar-nav .nav-link:hover::after {
+    -webkit-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    transform: scaleX(1);
+  }
+
+  .dropdown-menu {
+    min-width: 200px;
+    -webkit-animation: dropdown-animation 0.3s;
+    animation: dropdown-animation 0.3s;
+    -webkit-transform-origin: top;
+    -ms-transform-origin: top;
+    transform-origin: top;
+  }
+}
+@-webkit-keyframes navbar-animation {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+@keyframes navbar-animation {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+@-webkit-keyframes dropdown-animation {
+  0% {
+    -webkit-transform: scaleY(0);
+    -ms-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+  75% {
+    -webkit-transform: scaleY(1.1);
+    -ms-transform: scaleY(1.1);
+    transform: scaleY(1.1);
+  }
+  100% {
+    -webkit-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
+@keyframes dropdown-animation {
+  0% {
+    -webkit-transform: scaleY(0);
+    -ms-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+  75% {
+    -webkit-transform: scaleY(1.1);
+    -ms-transform: scaleY(1.1);
+    transform: scaleY(1.1);
+  }
+  100% {
+    -webkit-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
 .title-container {
   margin-top: 1em;
   margin-right: auto;
@@ -284,30 +498,24 @@ h3 {
   font-size: 12px;
 }
 
-.fixed {
-  background-image: url(../assets/img/country-house.png);
+.two-col-container {
+  background-image: url(../assets/img/mtn.jpg);
   background-size: cover;
   background-position: center;
-  height: 650px;
   z-index: -1;
-}
-
-.two-col-content {
-  margin-left: 12%;
-  margin-right: 12%;
 }
 
 .two-col-img-container {
   box-shadow: 10px 10px 15px -12px rgba(0, 0, 0, 0.75);
-  background-color: #f0eade93;
-  margin-top: 3.5em;
-  margin-bottom: 1em;
+  background: white;
+  margin-top: 9.5em;
+  margin-bottom: 7em;
 }
 
 .landing-img {
-  border-radius: 50%;
   margin-bottom: 1rem;
   margin-top: 2rem;
+  padding: 1rem;
 }
 
 .landing-card {
@@ -320,7 +528,7 @@ h3 {
   margin-bottom: 0.75rem;
   color: #515052;
   font-weight: 900;
-  font-size: 1.125rem;
+  font-size: 3.125rem;
   letter-spacing: 0.021rem;
 }
 
@@ -383,7 +591,7 @@ h3 {
 .card .landing-contacts ul > li > a {
   display: block;
   color: #515052;
-  font-size: 0.875rem;
+  font-size: 1rem;
   font-weight: bold;
   letter-spacing: 0.021em;
 }
@@ -398,9 +606,6 @@ h3 {
   box-shadow: 0 0.5625rem 1.125rem 0 rgba(64, 64, 64, 0.14);
   margin-top: 1em;
 }
-.icon-container .row {
-  margin-bottom: 2rem;
-}
 .icon-container .landing-img-icon {
   display: inline-block;
   padding-left: 1.85rem;
@@ -411,11 +616,12 @@ h3 {
 }
 
 .two-col-text-container {
-  margin-top: 4rem;
-  margin-left: auto;
+  color: white;
+  margin-bottom: 5rem;
 }
-.two-col-text-container h2 {
-  font-size: 3rem;
+.two-col-text-container h1 {
+  font-size: 4rem;
+  font-weight: 800;
 }
 .two-col-text-container p {
   font-weight: 100;
@@ -450,6 +656,15 @@ h3 {
   }
 }
 @media (min-width: 992px) {
+  .landing-card-body h6 {
+    margin-top: 0;
+    margin-bottom: 0.75rem;
+    color: #515052;
+    font-weight: 900;
+    font-size: 2.125rem;
+    letter-spacing: 0.021rem;
+  }
+
   .landing-img {
     margin-top: 1rem;
     border-radius: 0%;
@@ -465,19 +680,24 @@ h3 {
   }
 
   .two-col-img-container {
-    margin-top: 0;
+    margin-left: 5%;
+    margin-top: 6.5em;
+    margin-bottom: 3em;
   }
 
   .landing-img {
     width: 100%;
   }
 
+  .two-col-text-container {
+    margin-top: 15rem;
+  }
   .two-col-text-container h2 {
     font-size: 3em;
     margin-bottom: 0.75em;
   }
   .two-col-text-container p {
-    font-size: 16px;
+    font-size: 1.25em;
     line-height: 26px;
   }
 }
@@ -501,19 +721,41 @@ h3 {
   padding: 0;
 }
 
-.fixed {
-  background-image: url(../assets/img/country-house.png);
+.two-col-container {
+  background-image: url(../assets/img/mtn.jpg);
   background-size: cover;
   background-position: center;
-  height: 650px;
   z-index: -1;
 }
 
+#about h1 {
+  font-size: 4rem;
+  font-weight: 800;
+}
+#about h5 {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 0.75rem;
+  font-weight: 900;
+  font-size: 2.125rem;
+  letter-spacing: 0.021rem;
+}
+#about p {
+  font-weight: 100;
+  font-size: 2rem;
+  letter-spacing: 0.4px;
+}
+
+.fixed img {
+  display: block;
+  height: 100px;
+  width: 100%;
+}
+
 .dark {
-  background-color: rgba(0, 0, 0, 0.75);
-  color: white;
-  height: 100%;
-  padding: 7rem 2rem;
+  background-color: #f1f1f1;
+  color: #515052;
+  padding: 4rem 2rem;
 }
 
 .fixed-background h3 {
@@ -523,25 +765,53 @@ h3 {
   margin-top: 1.5rem;
 }
 
-.jumbotron {
-  background-color: #f0eade93;
-  border-radius: 0;
-  margin-bottom: 0;
-  padding: 2rem 0 3.5rem;
+@media (min-width: 992px) {
+  .contact-container p {
+    font-size: 1.25em;
+  }
+}
+.services-container h1 {
+  font-size: 4rem;
+  font-weight: 800;
 }
 
-h3.heading {
-  font-size: 1.9rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 1.9rem;
+.service-col .service-card .post-thumb {
+  display: block;
+  position: relative;
+}
+.service-col .service-card .post-thumb > img {
+  display: block;
+  width: 100%;
+}
+.service-col .service-card .service-card-body {
+  padding: 1.25rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.service-col .service-card .service-card-body .service-title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 0.75rem;
+  font-weight: 900;
+  font-size: 2.125rem;
+  letter-spacing: 0.021rem;
+}
+.service-col .service-card .service-card-body .service-title > a {
+  color: #515052;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+  text-decoration: none;
+}
+.service-col .service-card .service-card-body .card-body {
+  font-size: 1.25em;
+  line-height: 26px;
+  font-weight: 100;
+  letter-spacing: 0.4px;
 }
 
-.heading-underline {
-  width: 3rem;
-  height: 0.2rem;
-  background-color: #004f11;
-  margin: 0 auto 2rem;
+#accordion .svg-inline--fa {
+  margin-left: 1em;
 }
 
 .card {
@@ -565,6 +835,7 @@ h3.heading {
 }
 
 .client-card {
+  background: none;
   border: none;
 }
 
@@ -572,7 +843,6 @@ h3.heading {
   display: block;
   width: 34px;
   height: 34px;
-  margin-bottom: 1rem;
   border-radius: 50%;
   background-color: #fff;
   color: #004f11;
@@ -584,16 +854,13 @@ h3.heading {
 }
 
 .client-card-body {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   flex: 1 1 auto;
   padding: 2rem 3.5rem 2rem 3.5rem;
 }
 .client-card-body .review-text {
   display: block;
   position: relative;
-  margin-bottom: 0.75rem;
+  margin-top: 0.75rem;
   padding-bottom: 0.625rem;
   font-size: 1.25rem;
   line-height: 1.4;
@@ -625,7 +892,8 @@ h3.heading {
 .client-card .client-card-footer {
   display: flex;
   align-items: center;
-  background-color: #fff;
+  background: -webkit-linear-gradient(to right, #71B280, #134E5E);
+  background: linear-gradient(to right, #71B280, #134E5E);
   border-top: 1px solid #e7e7e7;
   justify-content: space-between;
   padding-top: 0.75rem;
@@ -648,7 +916,7 @@ h3.heading {
   width: 100%;
 }
 .client-card .client-card-footer .post-author .post-author-name {
-  color: #004f11;
+  color: white;
   display: table-cell;
   padding-left: 0.5rem;
   -webkit-transition: opacity 0.25s;
@@ -662,7 +930,7 @@ h3.heading {
   margin-left: 10px;
   -webkit-transition: opacity 0.25s;
   transition: opacity 0.25s;
-  color: #004f11;
+  color: white;
   font-size: 0.625rem;
   font-weight: 600;
   text-decoration: none;
@@ -670,17 +938,16 @@ h3.heading {
 }
 
 .carousel-card {
-  margin-top: 2em;
-  margin-bottom: 2em;
+  background: white;
+  margin-bottom: 4em;
+  margin-top: 4em;
 }
 
 #clientCarousel {
-  margin-top: 1em;
-  margin-bottom: 1em;
   overflow: hidden;
 }
 #clientCarousel .carousel-item {
-  background-color: #ffffff;
+  background: none;
 }
 
 .carousel-card-content {
@@ -705,7 +972,7 @@ h3.heading {
 }
 
 .carousel-card-pic-col {
-  background: url("../assets/img/country-house.jpg");
+  background: url("../assets/img/oly-1.png");
   background-size: cover;
   padding-right: 0;
 }
@@ -807,6 +1074,10 @@ h3.carousel-heading {
 @media (min-width: 992px) {
   .carousel-container {
     display: block;
+  }
+
+  .carousel-card {
+    margin-top: 2em;
   }
 
   .carousel-card-pic-col {
