--- a/public/styles/scss/module/_landing-section.scss
+++ b/public/styles/scss/module/_landing-section.scss
@@ -1,22 +1,19 @@
 @import '../base/image-style-extends';
-
-  .two-col-content{
-    // border: 1px solid black;
-    margin-left: 12%;
-    margin-right: 12%;
-  }
+.two-col-container{
+  @extend %section-img-style;
+}
     // Image Col
     .two-col-img-container{
       box-shadow: 10px 10px 15px -12px rgba(0,0,0,0.75);
-      background-color: $primary-tan;
-      margin-top: 3.5em;
-      margin-bottom: 1em;
+      background: white;
+      margin-top: 9.5em;
+      margin-bottom: 7em;
     }
 
     .landing-img{
-      border-radius: 50%;
       margin-bottom: 1rem;
       margin-top: 2rem;
+      padding: 1rem;
       // border: 1px solid orange;
     }
     // Image Col Card
@@ -31,7 +28,7 @@
         margin-bottom: .75rem;
         color: $stone-grey;
         font-weight: 900;
-        font-size: 1.125rem;
+        font-size: 3.125rem;
         letter-spacing: .021rem;
       }
     }
@@ -98,7 +95,7 @@
         ul>li>a{
           display: block;
           color: $stone-grey;
-          font-size: .875rem;
+          font-size: 1rem;
           font-weight: bold;
           letter-spacing: .021em;
         }
@@ -115,9 +112,9 @@
         box-shadow: 0 0.5625rem 1.125rem 0 rgba(64,64,64,0.14);
         margin-top: 1em;
       }
-      .row{
-        margin-bottom: 2rem;
-      }
+      // .row{
+      //   // margin-bottom: 2rem;
+      // }
       .landing-img-icon{
         display: inline-block;
         padding-left: 1.85rem;
@@ -131,11 +128,11 @@
 
     // Text Col
     .two-col-text-container{
-      margin-top: 4rem;
-      margin-left: auto;
-      // margin-right: auto;
-      h2{
-        font-size: 3rem;
+      color: white;
+      margin-bottom: 5rem;
+      h1{
+        font-size: 4rem;
+        font-weight: 800;
       }
       p{
         font-weight: 100;
@@ -174,6 +171,16 @@
   }
 }
 @include media-breakpoint-up(lg) {
+  .landing-card-body{
+    h6{
+      margin-top: 0;
+      margin-bottom: .75rem;
+      color: $stone-grey;
+      font-weight: 900;
+      font-size: 2.125rem;
+      letter-spacing: .021rem;
+    }
+  }
   .landing-img{
     margin-top: 1rem;
     border-radius: 0%;
@@ -187,19 +194,21 @@
     }
   }
   .two-col-img-container {
-    margin-top: 0;
+    margin-left: 5%;
+    margin-top: 6.5em;
+    margin-bottom: 3em;
   }
   .landing-img{
     width: 100%;
   }
   .two-col-text-container{
-    // margin-top: 1rem;
+    margin-top: 15rem;
     h2{
       font-size: 3em;
       margin-bottom: .75em;
     }
     p{
-      font-size: 16px;
+      font-size: 1.25em;
       line-height: 26px;
     }
   }
