--- a/public/styles/scss/module/_portfolio-section.scss
+++ b/public/styles/scss/module/_portfolio-section.scss
@@ -1,13 +1,35 @@
 @import '../base/image-style-extends';
 // =============== PORTFOLIO; ABOUT ME SECTION ========== //
+#about{
+  h1{
+    font-size: 4rem;
+    font-weight: 800;
+  }
+  h5{
+    display: block;
+    margin-top: 0;
+    margin-bottom: 0.75rem;
+    font-weight: 900;
+    font-size: 2.125rem;
+    letter-spacing: 0.021rem;
+  }
+  p{
+    font-weight: 100;
+    font-size: 2rem;
+    letter-spacing: 0.4px;
+  }
+}
 .fixed{
-  @extend %section-img-style
+  img{
+  display: block;
+  width: 100%;
+  }
 }
 .dark{
-  background-color: rgba(0,0,0, 0.75);
-  color: white;
-  height: 100%;
-  padding: 7rem 2rem;
+  background-color: rgba(241, 241, 241);
+  color: $stone-grey;
+  // height: 100%;
+  padding: 4rem 2rem;
 }
 .fixed-background{
   h3{
@@ -17,3 +39,11 @@
     margin-top: 1.5rem;
   }
 }
+@media (min-width: 992px) {
+  .contact-container{
+    p{
+      font-size: 1.25em;
+    }
+  }
+} 
+
