--- a/views/includes/components/navigation.pug
+++ b/views/includes/components/navigation.pug
@@ -1,132 +1,39 @@
-#home
-  nav.navbar.fixed-top.navbar-expand-lg.navbar-light.scrolling-navbar
-    a.navbar-brand(href="#")
-      img(src="../styles/assets/img/BenGaubert.png")
-    button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation")
-      span.navbar-toggler-icon
-    .collapse.navbar-collapse(id="navbarResponsive")
+nav.navbar.navbar-expand-lg.navbar-dark
+  .container
+    a.navbar-brand(href='#')
+      img(src="../styles/assets/img/BenGaubert.png" id="profile-pic")
+    button.navbar-toggler.collapsed(type='button' data-toggle='collapse' data-target='#main-nav')
+      span.menu-icon-bar
+      span.menu-icon-bar
+      span.menu-icon-bar
+    #main-nav.collapse.navbar-collapse
       ul.navbar-nav.ml-auto
-        li.nav-item
-          a.nav-link(href="#") Home
-        li.nav-item
-          a.nav-link(href="#") Services
-        li.nav-item
-          a.nav-link(href="#") Meet Ben
-        li.nav-item
-          a.nav-link(href="#") Connect
-  //- nav.navbar.navbar-full.navbar-light
-  //-   button.navbar-toggler.d-lg-none(type="button" data-toggle="collapse" data-target="#navbarResponsive")
-  //-     span.navbar-toggler-icon
-  //-   a.navbar-brand(href="#")
-  //-     img.img-rounded(src="../styles/assets/img/logo.png")
-  //-   |
-  //-   |
-  //-   .collapse.navbar-expand-md(id="navbarResponsive")
-  //-     ul.nav.navbar-nav.float-lg-left
-  //-       li.nav-item
-  //-         a.nav-link(href="#home") Home
-  //-       li.nav-item
-  //-         a.nav-link(href="#description") Services
-  //-       li.nav-item
-  //-         a.nav-link(href="#about") Meet Ben
-  //-       li.nav-item
-  //-         a.nav-link(href="#contactForm" data-toggle="collapse" data-target="#contactForm") Connect
+        li
+          a.nav-item.nav-link.active(href='#') Home
+        li
+          a.nav-item.nav-link(href='#') Meet Ben
+        li
+          a.nav-item.nav-link(href='#') Services
+        li.dropdown
+          a.nav-item.nav-link(href='#' data-toggle='dropdown') Contact
+          .dropdown-menu
+            a.dropdown-item(href='#') (206) 471-9205
+            a.dropdown-item(href='#') bengaubert@greenerealty.com
+            a.dropdown-item(href='#') 500 Greene Way
 
+//- nav.navbar.fixed-top.navbar-expand-lg.scrolling-navbar
+//-   a.navbar-brand(href="#")
+//-     img(src="../styles/assets/img/BenGaubert.png")
+//-   button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation")
+//-     span.navbar-toggler-icon
+//-   .collapse.navbar-collapse(id="navbarResponsive")
+//-     ul.navbar-nav.ml-auto
+//-       li.nav-item
+//-         a.nav-link(href="#") Home
+//-       li.nav-item
+//-         a.nav-link(href="#") Services
+//-       li.nav-item
+//-         a.nav-link(href="#") Meet Ben
+//-       li.nav-item
+//-         a.nav-link(href="#") Connect
 
-
-  //- nav.navbar-light.navbar.navbar-expand-lg.fixed-top.scrolling-navbar
-  //-   .col-2
-  //-     .row.mx-auto.justify-content-center.navbar-brand
-  //-       img(src='../styles/assets/logos/logo.png')
-  //-   .col-8
-  //-     .row.mx-auto.justify-content-center
-  //-       h1#main-title BEN GAUBERT
-  //-   .col-2
-  //-     .row.mx-auto.justify-content-center
-  //-       button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarResponsive")
-  //-         span.navbar-toggler-icon
-  //-   .col-sm-4#navbarResponsive.collapse.navbar-collapse.mx-auto
-  //-     ul.navbar-nav.text-center
-        li.nav-item
-          a.nav-link(href="#home") Home
-        li.nav-item
-          a.nav-link(href="#description") Services
-        li.nav-item
-          a.nav-link(href="#about") Meet Ben
-        li.nav-item
-          a.nav-link(href="#contactForm" data-toggle="collapse" data-target="#contactForm") Connect
-
-      //- .col-sm-2.logo-col.align-self-center
-      //-   .row
-      //-     img(src='../styles/assets/img/logo.png')
-      //- .col.logo-col.justify-content-center
-      //-   .row.justify-content-center
-      //-     h1#main-title BEN GAUBERT
-          //- .col-sm-12.logo-col
-          //-   .row.title-row.no-gutters
-          //-     i.title-icon(class=envelope_icon)
-          //-     span (206) 451-8000
-          //-   .row.title-row.no-gutters
-          //-     i.title-icon(class=envelope_icon)
-          //-     span bengaubert@greenerealty.com
-    //- button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarResponsive")
-    //-   span.navbar-toggler-icon
-    //- .col-sm-4#navbarResponsive.collapse.navbar-collapse
-    //-   ul.navbar-nav
-    //-     li.nav-item
-    //-       a.nav-link(href="#home") Home
-    //-     li.nav-item
-    //-       a.nav-link(href="#description") Services
-    //-     li.nav-item
-    //-       a.nav-link(href="#about") Meet Ben
-    //-     li.nav-item
-    //-       a.nav-link(href="#contactForm" data-toggle="collapse" data-target="#contactForm") Connect
-
-
-//- ====== LANDING TITLE
-    .container
-      .col-sm-12.title-container.text-center
-        .row.logo-row
-          .col-sm-4.logo-col
-            .row.justify-content-end
-              img(src='../styles/assets/img/logo.png')
-          .col-sm-8.logo-col.align-self-center
-            .row
-              h1#main-title BEN GAUBERT
-              .col-sm-12.logo-col
-                .row.title-row.no-gutters
-                  i.title-icon(class=envelope_icon)
-                  span (206) 451-8000
-                .row.title-row.no-gutters
-                  i.title-icon(class=envelope_icon)
-                  span bengaubert@greenerealty.com
-    .container
-      .col-sm-12.title-container.text-center
-        .row.logo-row
-          .col-sm-4.logo-col
-            .row.justify-content-end
-              img(src='../styles/assets/img/logo.png')
-          .col-sm-8.logo-col.align-self-center
-            .row
-              h1#main-title BEN GAUBERT
-              .col-sm-12.logo-col
-                .row.title-row.no-gutters
-                  i.title-icon(class=envelope_icon)
-                  span (206) 451-8000
-                  i.title-icon(class=envelope_icon)
-                  span bengaubert@greenerealty.com
-      a.navbar-brand(href="#")
-        img(src="../styles/assets/logos/logo.png")
-      button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarResponsive")
-        span.navbar-toggler-icon
-      .col-sm-12#navbarResponsive.collapse.navbar-collapse
-        .row.justify-content-center
-          ul.navbar-nav
-            li.nav-item
-              a.nav-link(href="#home") Home
-            li.nav-item
-              a.nav-link(href="#description") Services
-            li.nav-item
-              a.nav-link(href="#about") Meet Ben
-            li.nav-item
-              a.nav-link(href="#contactForm" data-toggle="collapse" data-target="#contactForm") Connect
